Enable nl_BE locale for the Belgian instance

--- a/inventory/group_vars/be.yml
+++ b/inventory/group_vars/be.yml
@@ -5,7 +5,7 @@ checkout_zone: Europe
 country_code: BE
 currency: EUR
 locale: fr_BE
-available_locales: fr_BE,de_DE,en_BE
+available_locales: fr_BE,de_DE,en_BE,nl_BE
 language: en_US.UTF-8
 language_packages:
   - language-pack-en-base
