--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -44,6 +44,12 @@
       - memcached
   tags: packages
 
+- name: define additional build dependencies for Ruby 2.1.5 on Ubuntu 18
+  set_fact:
+    rbenv_extra_depends:
+      - libssl1.0-dev
+  when: ansible_distribution_major_version == '18'
+
 # Remove monit if still installed. The notified handlers will run only once
 # (when the main task triggers a change by removing the config file)
 - name: clean up monit
