Move OS-specific tasks into new compatibility role

--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -26,6 +26,9 @@
     - role: common # Install common apps and libraries, and setup shell.
       tags: common
 
+    - role: compatibility # Handle version-specific OS dependencies and configuration
+      tags: compatibility
+
     - role: language # Setup locale.
       tags: language
 
