Improve community roles install task for Semaphore deployment

--- a/roles/semaphore_deployment/tasks/main.yml
+++ b/roles/semaphore_deployment/tasks/main.yml
@@ -34,7 +34,9 @@
   tags: fetch_ofn_install
 
 - name: install community modules
-  shell: "/home/{{ deployment_user }}/ofn-install/bin/setup"
+  shell: "bin/setup"
+  args:
+    chdir: "/home/{{ deployment_user }}/ofn-install/"
   tags: update_community_modules
 
 - name: create secure directory for keys
