--- a/playbooks/postgres_tuning.yml
+++ b/playbooks/postgres_tuning.yml
@@ -32,6 +32,7 @@
           effective_cache_size = {{ ( ( ansible_memtotal_mb / 4 ) * 3 ) | int }}MB
           maintenance_work_mem = {{ ( ansible_memtotal_mb / 16 ) | int }}MB
           wal_buffers = 16MB
+          work_mem = 6MB
         dest: "/etc/postgresql/{{ pg_current_version.stdout }}/main/conf.d/tuning.conf"
       become: yes
       register: tuning_configuration
