--- a/roles/shared_handlers/handlers/main.yml
+++ b/roles/shared_handlers/handlers/main.yml
@@ -1,7 +1,30 @@
 # This role holds reusable handlers that can be included in multiple playbooks to keep things DRY
+- name: precompile assets
+  command: bash -lc "bundle exec rake assets:precompile:primary RAILS_GROUPS=assets RAILS_ENV={{ rails_env }}"
+  args:
+    chdir: "{{ current_path }}"
+  become: yes
+  become_user: "{{ unicorn_user }}"
+  notify: precompile nondigest assets
+
+- name: precompile nondigest assets
+  command: bash -lc "bundle exec rake assets:precompile:nondigest RAILS_GROUPS=assets RAILS_ENV={{ rails_env }}"
+  args:
+    chdir: "{{ current_path }}"
+  become: yes
+  become_user: "{{ unicorn_user }}"
+
 - name: restart unicorn
   service:
     name: unicorn_{{ app }}
+    state: restarted
+  become: yes
+  become_user: root
+  notify: restart nginx
+
+- name: restart nginx
+  service:
+    name: nginx
     state: restarted
   become: yes
   become_user: root
