--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -17,10 +17,11 @@ secret_token: 'xxxxxx'
 # Create a Google Maps API key and enable Javascript and Places libraries
 google_maps_api_key:
 
-# Set these if using Amazon S3 backups with db2fog
-#s3_backups_bucket:
+# Set these if using Amazon S3
 #s3_access_key:
 #s3_secret:
+#s3_images_bucket:
+#s3_backups_bucket:
 
 # Stripe Connect API keys
 # Find these under 'API keys' and 'Connect' in your Stripe account dashboard -> Account Settings
