--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -54,6 +54,8 @@
       tags: app
 
     - role: dbserver # Set up database server and user for the app.
+      become: yes
+      become_user: root
       tags: dbserver
       db_user_roles: CREATEDB
 
