--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -1,29 +1,29 @@
 --- # dbserver
 
-- name: install postgres packages
-  apt:
-    pkg={{ item }}
-    state=present
-  become: yes
-  with_items:
-    - postgresql
-    - postgresql-client
-    - postgresql-contrib
+- name: install postgres via community role
+  include_role:
+    name: geerlingguy.postgresql
+  vars:
+    postgresql_user: postgres
+    postgresql_hba_entries: False # Do not overwrite existing pg_hba.conf files
+    postgresql_users:
+      - name: "{{ db_user }}"
+        password: "{{ db_password }}"
+        role_attr_flags: "{{ db_user_roles }}"
+    postgresql_databases:
+      - name: "{{ db }}"
+        owner: "{{ db_user }}"
+        login_host: "{{ db_host }}"
+        login_password: "{{ db_password }}"
+        lc_collate: en_US.utf8
+        lc_ctype: en_US.utf8
 
-- name: create db user
-  become: yes
-  become_user: postgres
-  postgresql_user:
-    name={{ db_user }}
-    password={{ db_password }}
-    role_attr_flags={{ db_user_roles }}
-
-- name: generate the .pgpass file
+- name: add .pgpass file for {{ unicorn_user }}
   template:
-    src=pgpass.j2
-    dest={{ unicorn_home_path }}/.pgpass
-    owner={{ unicorn_user }}
-    mode=0600
+    src: pgpass.j2
+    dest: "{{ unicorn_home_path }}/.pgpass"
+    owner: "{{ unicorn_user }}"
+    mode: 0600
   become: yes
   become_user: "{{ unicorn_user }}"
 
