--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -57,6 +57,31 @@ db_host: localhost
 postgres_encoding: en_US.utf8
 
 #----------------------------------------------------------------------
+# Postgresql variables
+
+# These include the default values for postgres, and some empty (extendable) values.
+# Entries marked custom_* can be defined in secrets.yml files, and will be appended
+# to the defaults if present. Make sure you use the "list" notation with the dashes!
+
+default_hba_entries:
+  - {type: local, database: all, user: postgres, auth_method: peer}
+  - {type: local, database: all, user: all, auth_method: peer}
+  - {type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5}
+  - {type: host, database: all, user: all, address: '::1/128', auth_method: md5}
+
+custom_hba_entries: []
+
+postgresql_hba_entries: "{{ default_hba_entries + custom_hba_entries }}"
+
+postgres_listen_addresses:
+  - localhost
+
+postgresql_global_config_options:
+  - option: listen_addresses
+    value: "{{ postgres_listen_addresses | join(',') }}"
+
+
+#----------------------------------------------------------------------
 # App variables
 app: openfoodnetwork
 # Paths
