--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -59,3 +59,23 @@ smtp_password:
 # https://github.com/openfoodfoundation/ofn-install/wiki/Issue-reporting
 #
 #bugsnag_key: ''
+
+
+# Example settings for integrations like Zapier.
+# ----------------------------------------------
+# Generate a strong password with this command: `openssl rand -hex 128`.
+# You can add one or multiple entries using the lists (with dashes), then run the
+# `integrations.yml` playbook on the target server.
+# To disable an integration, change the `state` key from `present` to: `absent`,
+# remove the custom_* entries, then run the integrations.yml playbook again.
+
+#db_integrations:
+#  - { user: zapier, state: present, password: incredibly_strong_password_goes_here }
+#
+#postgres_listen_addresses:
+#  - '*'
+#
+#custom_hba_entries:
+#  - { type: hostssl, database: "{{ db }}", user: zapier, address: '54.86.9.50/32', auth_method: md5 }
+
+
