--- a/inventory/host_vars/prod2.openfoodnetwork.org.au/config.yml
+++ b/inventory/host_vars/prod2.openfoodnetwork.org.au/config.yml
@@ -5,5 +5,19 @@ rails_env: production
 
 admin_email: maikel@openfoodnetwork.org.au
 
+mail_domain: openfoodnetwork.org
+
+# Optional list of subdomains to register in letsencrypt certificate
+# Defaults to {{ domain }} if list is undefined
+#
+#certbot_domains:
+#  - openfoodnetwork.org.au
+#  - www.openfoodnetwork.org.au
+#  - prod2.openfoodnetwork.org.au
+
+# Size in bytes. You can also use units like 1G, 512MiB or 1000KB. See: `man fallocate`
+# The default is `false`, not installing a swapfile.
+swapfile_size: 1G
+
 unicorn_timeout: 120
 unicorn_workers: 6
