Provision dbserver as root in LXC development
Otherwise the postgresql community role can't modify /etc/profile.d

--- a/playbooks/development.yml
+++ b/playbooks/development.yml
@@ -33,6 +33,8 @@
       tags: ruby
 
     - role: dbserver # Set up database server and user for the app.
+      become: yes
+      become_user: root
       tags: dbserver
       db_user_roles: SUPERUSER,CREATEDB
 
