Smarter unicorn reload handler

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -25,6 +25,7 @@
     owner: "{{ unicorn_user }}"
     group: "{{ unicorn_user }}"
   become: yes
+  tags: unicorn_config
   notify: reload unicorn
 
 - name: Reload systemd
