--- a/roles/webserver/handlers/main.yml
+++ b/roles/webserver/handlers/main.yml
@@ -1,8 +1,8 @@
-- name: reload unicorn
+- name: check service status
   service_facts:
-  notify: reload unicorn if running
+  listen: reload unicorn
 
-- name: reload unicorn if running
+- name: reload unicorn
   service:
     name: unicorn_{{ app }}
     state: reloaded
