--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,29 @@
 ---
-sudo: false
+sudo: required
+dist: xenial
+cache: bundler
 language: python
 python: "2.7"
+services:
+  - postgresql
+
+before_install:
+  # Remove extra postgres sources from travis
+  - sudo rm -f /etc/apt/sources.list.d/pgdg.list
+  # Remove RVM from travis
+  - rvm implode --force
+  - sudo rm -rf $HOME/.rvm $HOME/.rvmrc /etc/rvmrc /etc/profile.d/rvm.sh /usr/local/rvm /usr/local/bin/rvm
+  - sed '/rvm/d' /home/travis/.bashrc
+  - sed '/rvm/d' /home/travis/.bash_profile
+  - sed '/rvm/d' /home/travis/.profile
+  - gem uninstall rvm
+  - unset GEM_HOME
+  - unset GEM_PATH
+  - unset RUBY_VERSION
+  - unset MY_RUBY_HOME
+  - unset IRBRC
 
 install:
-  # - pip install dopy
-  # - pip install httplib2
   - pip install 'ansible<2.7.0'
   - pip install 'ansible-lint==4.1.0'
 
@@ -19,3 +37,4 @@ script:
   - ansible-playbook -i inventory/dev --syntax-check playbooks/setup.yml
   - ansible-playbook -i inventory/dev --syntax-check playbooks/development.yml
   - ansible-lint site.yml --exclude=community
+  - ansible-playbook site.yml --limit travis --connection local
