Ensure correct exit code is returned on failure after using a rescue block.
See: https://github.com/ansible/ansible/issues/48344

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -31,3 +31,7 @@
             channel: "#devops-notifications"
             username: "ansible executed by {{ lookup('env','USER') }}"
           when: inventory_hostname != "local_vagrant"
+
+        - debug:
+            msg: Deployment failed
+          failed_when: True # Ensure Ansible returns a non-zero error code after rescue
