--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -99,7 +99,7 @@
         method: POST
         body:
           title: "Provisioned"
-          text: "Provisioned host: {{ inventory_hostname }} ({{ ansible_limit }})"
+          text: "Provisioned host: {{ inventory_hostname }} ({{ host_id | default(ansible_limit) }})"
           host: "{{ inventory_hostname }}"
           tags:
             - "provisioned"
