--- a/roles/datadog/tasks/main.yml
+++ b/roles/datadog/tasks/main.yml
@@ -8,7 +8,7 @@
       hostname: "{{ inventory_hostname }}"
       tags:
         - "env:{{ rails_env }}"
-        - "host-id:{{ ansible_limit }}"
+        - "host-id:{{ host_id | default(ansible_limit) }}"
       logs_enabled: true
   when: datadog_key is defined
 
