Rotate Rails and (Datadog) Postgres Query logs

--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -82,6 +82,10 @@
       become: yes
       tags: datadog
 
+    - role: arillso.logrotate
+      become: yes
+      tags: logrotate
+
   tasks:
     - meta: flush_handlers # Ensure handlers run successfully before reporting success
 
