Disable unattended upgrades of nginx packages
We'll still upgrade nginx any time we provision, if a new version is available in the official nginx repo.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -33,6 +33,9 @@ admin_email: "admin@{{ domain }}"
 #----------------------------------------------------------------------
 # security role variables
 security_autoupdate_mail_to: "{{ developer_email }}"
+security_autoupdate_blacklist:
+  - nginx
+  - nginx-common
 
 #----------------------------------------------------------------------
 # Database backup variables
